<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appyellow"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarStyle="outsideOverlay"
    tools:context="app.msupply.com.ideaurben.Activity.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_forgotnew_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/et_input_forgot_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/err_enterotp"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHighlight="@color/block"
                android:textColorHint="@color/block"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_forgotnewpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_input_forgotnewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/newpassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHighlight="@color/block"
                android:textColorHint="@color/block"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Forgot_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_input_forgotconfimpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHighlight="@color/block"
                android:textColorHint="@color/block"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tv_update_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonselector"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/updateforgotpassword"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
